--- a/src/main/resources/graphics/Charts.html
+++ b/src/main/resources/graphics/Charts.html
@@ -80,9 +80,17 @@
             counter++;
         }
     };
+    
+    Chart.plugins.register({
+	  beforeDraw: function(chartInstance) {
+	    var ctx = chartInstance.chart.ctx;
+	    ctx.fillStyle = chartInstance.config.options.chartBackgroundColor;
+	    ctx.fillRect(0, 0, chartInstance.chart.width, chartInstance.chart.height);
+	  }
+	});
 
     Chart.defaults.scale.ticks.beginAtZero = true;
-    Chart.defaults.scale.ticks.stepSize = 1;
+    Chart.defaults.scale.ticks.precision = 0;
     Chart.defaults.scale.ticks.suggestedMax = 10;
     Chart.defaults.scale.ticks.suggestedMin = 0;
     Chart.defaults.scale.autoSkip = true;
