Added boxplot log, violin log and bubble logarithmic

--- a/src/main/resources/graphics/RiskCharts.html
+++ b/src/main/resources/graphics/RiskCharts.html
@@ -21,10 +21,11 @@
 
 <div id="all_tabs" class="controles">
     <div class="pestañas" id="RISK">
-     	<input type="button" class="btn" id="RISK_BAR_TEMPORAL" onclick='javaConnector.updateCharts("RISK_BAR_TEMPORAL");' />
-          <input type="button" class="btn" id="RISK_EVOLUTION" onclick='javaConnector.updateCharts("RISK_EVOLUTION");' />
-        <input type="button" class="btn" id="RISK_BAR" onclick='javaConnector.updateCharts("RISK_BAR");' />
-        <input type="button" class="btn" id="BUBBLE" onclick='javaConnector.updateCharts("BUBBLE");' />
+     	<input type="button" class="btn" id="RISK_BAR_TEMPORAL" onclick='javaConnector.updateCharts(this.id);' />
+          <input type="button" class="btn" id="RISK_EVOLUTION" onclick='javaConnector.updateCharts(this.id);' />
+        <input type="button" class="btn" id="RISK_BAR" onclick='javaConnector.updateCharts(this.id);' />
+        <input type="button" class="btn" id="BUBBLE" onclick='javaConnector.updateCharts(this.id);' />
+        <input type="button" class="btn" id="BUBBLE_LOGARITHMIC" onclick='javaConnector.updateCharts(this.id);' />
      
        
     </div>
