--- a/src/main/resources/graphics/Charts.html
+++ b/src/main/resources/graphics/Charts.html
@@ -63,7 +63,7 @@
 <div id="chart-container" class="chart-container">
     <canvas id="myChart"></canvas>
 </div>
-<div id="apexchartsDiv"></div>
+<div id="apexchartsDiv" class="apexchart-container"></div>
 <div id="tabulatorDiv"></div>
 
 <script type="text/javascript">
