--- a/src/main/resources/graphics/RiskCharts.html
+++ b/src/main/resources/graphics/RiskCharts.html
@@ -27,9 +27,9 @@
     </div>
 
     <div class="opciones">
-        <input type="button" value="Leyenda" class="btn" id="btnLegend" onclick="hideLegend()" />
-        <input type="button" value="Media General" class="btn" id="btnMean" onclick="showGeneralMean()" />
-        <input type="button" class="btn" id="btnGroupMean" onclick="showGroupMean()" />
+        <button value="Leyenda" class="btn" id="btnLegend" onclick="hideLegend()" />
+        <button value="Media General" class="btn" id="btnMean" onclick="showGeneralMean()" />
+        <button class="btn" id="btnGroupMean" onclick="showGroupMean()" />
     </div>
 </div>
 
