--- a/src/main/resources/graphics/Charts.html
+++ b/src/main/resources/graphics/Charts.html
@@ -18,6 +18,7 @@
    <script type="text/javascript" src="./lib/visTimeline.js"></script>
    <script type="text/javascript" src="./lib/plotly.js"></script>
    <script type="text/javascript" src="./locales/plotly-es.js"></script>
+   <script type="text/javascript" src="./lib/wheelzoom.js"></script>
    <script type="text/javascript">
       Chart.defaults.global.animation.duration = 0;
       Chart.defaults.global.elements.line.fill = false;
@@ -104,7 +105,8 @@
 
          visNetwork = new vis.Network(document.getElementById('visNetworkDiv'), {}, {});
          visTimeline = new vis.Timeline(document.getElementById('visTimelineDiv'), {}, {});
-
+         wheelzoom(document.getElementById('wordCloud'));
+         document.getElementById('wordCloud').ondblclick = function () { document.getElementById('wordCloud').dispatchEvent(new CustomEvent('wheelzoom.reset')) };
 
       }
 
@@ -251,18 +253,12 @@
       }
 
       function updateWordCloud(image, options) {
-         hiddenCharts("canvas-container", options);
+         hiddenCharts("wordCloud", options);
          wordCloud = document.getElementById('wordCloud');
-         imageWordCloud = new Image();
-         imageWordCloud.onload = function () {
-            wordCloud.height = imageWordCloud.height;
-            wordCloud.width = imageWordCloud.width;
 
-            wordCloud.getContext("2d").drawImage(imageWordCloud, 0, 0);
 
-         };
+         wordCloud.src = image;
 
-         imageWordCloud.src = image;
 
 
       }
@@ -277,10 +273,14 @@
 
          Plotly.react('plotlyDiv', plot);
 
-         if (options.onClick) {
-            document.getElementById('plotlyDiv').on('plotly_click', options.onClick);
 
+         if (options.onClick) {
+            document.getElementById('plotlyDiv').removeAllListeners('plotly_click');
+            document.getElementById('plotlyDiv').on('plotly_click', options.onClick);
          }
+
+
+
       }
 
       function hiddenCharts(value, options) {
@@ -291,7 +291,7 @@
          displayButton('tabulatorDiv', value == "tabulator");
          displayButton('visNetworkDiv', value == "visNetwork");
          displayButton('visTimelineDiv', value == "visTimeline");
-         displayButton('canvas-container', value == "canvas-container");
+         displayButton('wordCloud', value == "wordCloud");
          displayButton('plotlyDiv', value == "plotly");
          displayButton('plotlyEmptyDiv', value == "plotly");
 
@@ -438,7 +438,7 @@
       }
 
       function toPercentage(value, max) {
-         return value + '/' + max + ' (' + (value / max).toLocaleString(locale, { style: 'percent', maximumFractionDigits: 2 }) +")";
+         return value + '/' + max + ' (' + (value / max).toLocaleString(locale, { style: 'percent', maximumFractionDigits: 2 }) + ")";
       }
    </script>
 </head>
@@ -460,7 +460,7 @@
    <div id="tabulatorDiv"></div>
    <div id="visNetworkDiv" class="visDiv"></div>
    <div id="visTimelineDiv" class="visDiv"></div>
-   <div id="canvas-container" class="canvas-container"><canvas id="wordCloud" class="canvas-word-cloud"></canvas></div>
+   <img class="center" id="wordCloud">
 </body>
 
 </html>
